# tree-sitter-akyno

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-akyno.pc.in
bindings/c/tree_sitter/: tree-sitter-akyno.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_akyno/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAkynoTests/: TreeSitterAkynoTests.swift
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: comment.txt  functions.txt  ident.txt  statements.txt  type.txt
